Fix Text Stroke on mobile

--- a/src/assets/welcome.css
+++ b/src/assets/welcome.css
@@ -16,7 +16,12 @@
     color: var(--text-color);
     /* -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: var(--primary-color); */
-    -webkit-text-stroke: 1px var(--primary-color);
+    text-shadow:
+       1px 0px 0 var(--primary-color),
+     -1px -1px 0 var(--primary-color),
+      1px -1px 0 var(--primary-color),
+      -1px 1px 0 var(--primary-color),
+       1px 1px 0 var(--primary-color);
 }
 .text-stroke-trick::after {
   content: attr(data-text);
@@ -210,15 +215,21 @@
   @media screen and (max-width:450px){
     #drop-text{
       position: absolute;
-      top:45%;
+      top:40%;
       left: 50%;
       transform: translate(-50%, 0);
       text-align: center;
       font-size: 35px;
       font-weight: 700;
       color: var(--text-color);
-      -webkit-text-stroke-width: 1px;
-      -webkit-text-stroke-color: var(--primary-color);
+      /* -webkit-text-stroke-width: 1px;
+      -webkit-text-stroke-color: var(--primary-color); */
+      text-shadow:
+       1px 0px 0 var(--primary-color),
+     -1px -1px 0 var(--primary-color),
+      1px -1px 0 var(--primary-color),
+      -1px 1px 0 var(--primary-color),
+       1px 1px 0 var(--primary-color);
   
   }
   }
